--- a/init/sendgrid.env
+++ b/init/sendgrid.env
@@ -1,1 +1,1 @@
-"export SENDGRID_API_KEY='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'" 
+"export SENDGRID_API_KEY='SG.YOUR SECRET KEY'" 
